funcionalidad de los pedidos implementada a medias

--- a/css/carrito.css
+++ b/css/carrito.css
@@ -68,6 +68,9 @@
 .info-section {
   flex: 2;
   margin-left: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 h1 {
