--- a/css/gestorStock.css
+++ b/css/gestorStock.css
@@ -36,7 +36,6 @@ body {
 
 
 
-
 .modal {
     display: none; /* Oculto por defecto */
     position: fixed; /* Fijo */
@@ -52,19 +51,25 @@ body {
 
 .modal-content {
     background-color: #fefefe;
-    margin: auto; /* Centrar el modal */
-    padding: 20px;
+    margin: 0; /* Centrar el modal */
+    padding: 10px;
     border: 1px solid #888;
     width: 50%; /* Ancho del modal (ajustar según necesidad) */
     max-width: 600px; /* Ancho máximo del modal */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para el modal */
     border-radius: 8px; /* Esquinas redondeadas */
     position: relative; /* Para que el contenido del modal se posicione dentro de él */
-    top: 35%; /* Posicionar el contenido del modal */
+    top: 50%; /* Posicionar el contenido del modal */
+    left: 25%;
     transform: translateY(-50%); /* Centrar verticalmente */
 }
 
 .close{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
     color: #aaa;
     font-size: 30px;
 }
@@ -72,83 +77,6 @@ body {
     color: #c9302c;
     transition: 0.3s;
 }
-
-
-#deleteModal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.1);
-    z-index: 1050;
-    width: 400px;  /* Ancho fijo para el modal */
-    max-width: 90%; /* Máximo ancho para pantallas pequeñas */
-    text-align: center;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
+button {
+    margin-top: 10px;
 }
-
-#deleteModal.show {
-    opacity: 1;
-    visibility: visible;
-}
-
-#deleteModal p {
-    font-size: 16px;
-    color: #333;
-    margin-bottom: 20px;
-    font-weight: 500;
-}
-
-.btn-confirm, .btn-cancel {
-    font-size: 16px;
-    padding: 12px 20px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    font-weight: 600;
-}
-
-.btn-confirm {
-    background-color: #d9534f;
-    color: white;
-}
-
-.btn-confirm:hover {
-    background-color: #c9302c;
-}
-
-.btn-cancel {
-    background-color: #f0f0f0;
-    color: #333;
-    margin-left: 10px;
-}
-
-.btn-cancel:hover {
-    background-color: #dcdcdc;
-}
-
-/* Fondo oscuro detrás del modal */
-#deleteModalBackdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: 1040;
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-}
-
-#deleteModalBackdrop.show {
-    visibility: visible;
-    opacity: 1;
-}
-
