--- a/css/carrito.css
+++ b/css/carrito.css
@@ -9,8 +9,12 @@
   height: 370px;
   width: 950px;
   display: flex;
-  padding: 20px;
+  padding: 0 20px;
   margin-bottom: 60px;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  border-color: #efeded;
 }
 
 .cart-container {
